JumpScript/tests/baselines/reference/generatorInAmbientContext4.d.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext4.d.jump(2,14): error TS1221: Generators are not allowed in an ambient context.


==== tests/cases/conformance/es6/yieldExpressions/generatorInAmbientContext4.d.jump (1 errors) ====
    declare module M {
        function *generator(): any;
                 ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }